<resources>
  <string name="app_name">b.u.</string>
  <string name="action_settings">Settings</string>
  <string name="generic_error">¯\\_(ツ)_/¯</string>
  <string name="connection_error">Connection troubles. Oh shit!</string>
  <string name="instagram_dialog_loading">Loading...</string>
  <string name="instagram_dialog_title">Instagram</string>
  <string name="login_button_connect">Connect</string>
  <string name="title_activity_instagrammer_detail">InstagrammerDetailActivity</string>
  <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards.\n\n"
  </string>
  <string name="find_instagrammers_empty_message">No results</string>
  <string name="find_instagrammers">Find instagrammers</string>
  <string name="title_activity_firebase_login">Log in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="sign_up_confirmation_message">We can\'t find a user with your credentials. Do you
    want to create one?
  </string>
  <string name="sign_up_confirmation_ok">OK</string>
  <string name="sign_up_confirmation_no">NO</string>
  <string name="sign_in_secure_text">We need an email and a password to secure your data</string>
  <string name="download_photo_permission_explaination">You must give us permission to save
    images.
  </string>
  <string name="ok">Ok</string>
  <string name="cancel">Cancel</string>
  <string name="downloaded_pictures_subfolder">bu/</string>
  <string name="downloaded_videos_subfolder">bu Videos/</string>
  <string name="menu_save_photo">Save picture</string>
  <string name="title_activity_saved_picture">Picture</string>
  <string name="pictures_activity">Pictures</string>
  <string name="instagrammers_activity">Instagrammers</string>
  <string name="show_in_instagram">Show in Instagram</string>
  <string name="title_activity_video">Videos</string>
  <string name="save_picture">Save picture</string>
  <string name="insert_picture_s_url_here">Insert picture URL</string>
  <string name="save_video">Save video</string>
  <string name="insert_video_url_here">Insert video URL</string>
  <string name="insert_instagrammer_url">Insert instagrammer URL</string>
  <string name="save_instagrammer">Save instagrammer</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="latest_fragment">Latest</string>
  <string name="share_this_awesome_app">Share this awesome app</string>
  <string name="share_app_subject">Download Instagram Images and Videos</string>
  <string name="share_app_message">b.u. allows to download videos and images from INSTAGRAM\'s
    links
  </string>
  <string name="share_app_website">https://losextraditablesstudio.github.io/</string>
  <string name="share_app_chooser_title">Share</string>
  <string name="delete_video_question">Do you want to delete the video?</string>
  <string name="delete_instagrammer_question">Do you want to delete the instagrammer?</string>
  <string name="bu_disclaimer">bu will not publish in your instagram account</string>
  <string name="shame_on_instagram_disclaimer">Instagram don\'t let us show you this :(\nClick to go to the profile</string>
  <string name="bottombar_pictures">Pictures</string>
  <string name="bottombar_videos">Videos</string>
  <string name="bottombar_users">Users</string>
  <string name="switch_to_login">Do you already have an account? Then click here!</string>
  <string name="log_in_text">Log in</string>
  <string name="bottombar_latest">Latest</string>
  <string name="nothing_found">Nothing found</string>
  <string name="retry">Retry</string>
  <string name="banner_inferior_ad_unit_id">ca-app-pub-6142616154749060/2899051437</string>
</resources>
