<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.view.activity.SignInActivity"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:layout_marginBottom="48dp"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:gravity="center"
      android:textSize="48dp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_in_secure_text"
      android:layout_marginBottom="8dp"
      android:textColor="@color/white"
      />

  <ProgressBar
      android:id="@+id/registration_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:visibility="gone"
      style="?android:attr/progressBarStyleLarge"
      />

  <ScrollView
      android:id="@+id/registration_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        android:id="@+id/email_registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            />

      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/email_login_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:background="?selectableItemBackground"
          android:clickable="true"
          android:text="@string/action_sign_in"
          android:textColor="@color/white"
          android:textStyle="bold"
          style="?android:textAppearanceSmall"
          />
    </LinearLayout>
  </ScrollView>
</LinearLayout>
